--- a/ws-server-rs/Cargo.toml
+++ b/ws-server-rs/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 tokio = { version = "1.28.0", features = ["full"] }
 futures-util = "0.3"
 tokio-tungstenite = "0.18.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
 # futures = "0.3.28"
 # futures-util = "0.3.28"
 # tokio = { version = "1.28.0", features = ["full"] }
